@@ -30,7 +30,7 @@ build-stamp: config-stamp
 	# Building package
 	$(MAKE) BUILD_TYPE=release
 	# make sure VBoxAddIF.sh is built, too
-	(cd src/VBox/Installer/linux; $(MAKE) `echo $(CURDIR)/out/linux.*/release/bin`/VBoxAddIF.sh)
+	$(MAKE) -C src/VBox/Installer/linux `echo $(CURDIR)/out/linux.*/release/bin`/VBoxAddIF.sh
 
 	touch build-stamp
 
@@ -92,9 +92,6 @@ install: build
 	install -D -m 0644 debian/pixmap/virtualbox-ose.xpm debian/$(sname)/usr/share/pixmaps/virtualbox-ose.xpm
 	install -D -m 644 src/VBox/Installer/linux/vboxnet.sh debian/$(sname).init
 	install -D -m 644 debian/interfaces debian/$(sname)/etc/vbox
-
-	echo "# VirtualBox installation directory" > $(CURDIR)/debian/$(sname)/etc/vbox/vbox.cfg
-	echo "INSTALL_DIR="\"/usr/lib/virtualbox\" >> $(CURDIR)/debian/$(sname)/etc/vbox/vbox.cfg
 
 	# Install virtualbox-ose-source
 	mv debian/$(sname)/usr/lib/virtualbox/src/* debian/$(psource)/usr/src/modules/$(sname)
