@@ -1,0 +1,2 @@
+# VirtualBox installation directory
+INSTALL_DIR="/usr/lib/virtualbox"
