@@ -1,9 +1,13 @@
 virtualbox-ose (1.5.2-dfsg2-7) UNRELEASED; urgency=low
 
+  [ Patrick Winnertz ]
   * Do only recommends the virtualbox-ose-modules package.. maybe someone
     would like to compile it on it's own, or not with m-a. (Closes: #456989) 
 
- -- Patrick Winnertz <winnie@debian.org>  Tue, 18 Dec 2007 23:51:34 +0100
+  [ Hilko Bengen ]
+  * install vbox.cfg using dh_install
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 19 Dec 2007 00:49:24 +0100
 
 virtualbox-ose (1.5.2-dfsg2-6) unstable; urgency=low
 
